# tcity

./: CMakeLists copy.txt  CMakeLists.txt  buildnrun.sh
include/: CommonTypes.h  LoadModel.h  RenderGLTF.h  RenderObject.h  Shader.h  SimpleCube.h  stb_image.h  stb_image_write.h  tiny_gltf.h
include/glad/: glad.h
src/: LoadModel.cpp  RenderGLTF.cpp  RenderObject.cpp  Shader.cpp  SimpleCube.cpp  main copy.cpp  main.cpp  tinygltf_impl.cpp
src/glad/: glad.c
src/objects/: untitled-cube-anim-2.glb  untitled-cubered-material.glb
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
